--- a/templates/app/main.yaml
+++ b/templates/app/main.yaml
@@ -18,6 +18,9 @@ spec:
       containers:
       - name: nginx
         image: danwhite123/nginx-image
+        resources:
+          requests:
+            cpu: 100m
         volumeMounts:
           - name: default-conf
             mountPath: /etc/nginx/conf.d/default.conf
